fix: changes scrollbar bg to transparent

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -85,7 +85,7 @@ $outline-color: transparent;
 
 $scrollbar-size: thin;
 $scrollbar-thumb-color: $primary;
-$scrollbar-bg-color: $secondary;
+$scrollbar-bg-color: transparent;
 
 // Containers
 // =================================================
